2006-10-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/erase-rows.scm
	* plug-ins/script-fu/scripts/hsv-graph.scm: don't ever use the term
	"drawable" in user-visible strings.

2006-10-25  Michael Natterer  <mitch@gimp.org>

	Added mechanism that should prevent undo corruption by
	broken plug-ins and scripts. Work in progress.

	* app/plug-in/Makefile.am
	* app/plug-in/gimpplugin-cleanup.[ch]: new files that (for now)
	keep track of the undo groups plug-in procedures open and close,
	and can fix an image's undo group state after a plug-in messed.

	* app/plug-in/gimppluginprocframe.h (struct GimpPlugInProcFrame):
	keep a list of plug-in cleanup structs.

	* app/plug-in/gimppluginprocframe.c
	(gimp_plug_in_proc_frame_dispose): call gimp_plug_in_cleanup() if
	the list is not empty.

	* tools/pdbgen/pdb/undo.pdb: keep track of undo groups using
	the new gimp_plug_in_cleanup_undo_group_start() and _end()
	functions. Fail if any of the functions returns FALSE.

	* app/pdb/undo_cmds.c: regenerated.

2006-10-25  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: added signals "parasite-attached" and
	"parasite-detached".

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpimageprofileview.[ch]: draft of a new widget that
	displays color profile information.

	* app/widgets/gimpimagepropview.c: minor cleanup and bug fix.

	* app/dialogs/image-properties-dialog.c: added Color Profile
	information.

	* plug-ins/common/lcms.c: bug fixes.

2006-10-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-vectors.c: remove_stroke is now a Vectors
	object method. Also implement, get_ID, get_vectors_ID, and get_points
	for VectorsStroke.

2006-10-24  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c: Reworded two error messages.
	Break out of for loop before i gets updated when error was detected
	to make sure error message reports correct parameter number.
