@@ -43,6 +43,7 @@ plug-ins/script-fu/scripts/comic-logo.scm
 plug-ins/script-fu/scripts/coolmetal-logo.scm
 plug-ins/script-fu/scripts/copy-visible.scm
 plug-ins/script-fu/scripts/crystal-logo.scm
+plug-ins/script-fu/scripts/difference-clouds.scm
 plug-ins/script-fu/scripts/distress-selection.scm
 plug-ins/script-fu/scripts/drop-shadow.scm
 plug-ins/script-fu/scripts/erase-rows.scm
